--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "plugins": [
     "react"
