--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
     "react"
   ],
   "rules": {
-    "max-len": ["error", { "code": 100 }]
+    "max-len": ["error", { "code": 100 }],
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/consistent-type-imports": "off"
   }
 }
