--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   "rules": {
     "max-len": ["error", { "code": 100 }],
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/consistent-type-imports": "off"
+    "@typescript-eslint/consistent-type-imports": "off",
+    "eslint@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
