--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "aws-sdk": "^2.1343.0",
+    "i18next": "^23.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "react-scripts": "5.0.1",
     "use-file-dialog": "^1.1.0",
     "web-vitals": "^2.1.4"
