--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-i18next": "^13.0.2",
     "react-image-file-resizer": "^0.4.8",
+    "react-markdown": "^8.0.7",
     "react-scripts": "5.0.1",
     "use-file-dialog": "^1.1.0",
     "web-vitals": "^2.1.4"
