reset version on breaking change

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "city-bingo",
-  "version": "0.1.0",
+  "version": "1.0-alpha",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
