--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "aws-sdk": "^2.1343.0",
-    "cropperjs": "^1.6.1",
     "i18next": "^23.4.1",
     "react": "^17.0.0 || ^18.0.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-i18next": "^13.0.2",
     "react-image-file-resizer": "^0.4.8",
