--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@types/react-dom": "^18.0.10",
     "aws-sdk": "^2.1343.0",
     "i18next": "^23.4.1",
+    "markdown-to-jsx": "^7.3.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-i18next": "^13.0.2",
     "react-image-file-resizer": "^0.4.8",
-    "react-markdown": "^8.0.7",
     "react-scripts": "5.0.1",
     "use-file-dialog": "^1.1.0",
     "web-vitals": "^2.1.4"
