--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^23.4.1",
     "markdown-to-jsx": "^7.3.2",
     "react": "^17.0.0 || ^18.0.0",
+    "react-confetti": "^6.1.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-i18next": "^13.0.2",
