--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-i18next": "^13.0.2",
     "react-image-file-resizer": "^0.4.8",
+    "react-material-ui-carousel": "^3.4.2",
     "react-scripts": "5.0.1",
     "use-file-dialog": "^1.1.0",
     "web-vitals": "^2.1.4"
